Overflow problem solved

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 2;
-    background-color: floralwhite;
+    background-color: white;
     padding-top: 10px;
     display: flex;
     flex-direction: column;
@@ -41,7 +41,7 @@ body {
     align-self: center;
     border-radius: 15px;
     border-style: inherit;
-    background-color: lightgray;
+    background-color: rgb(233, 233, 233);
 }
 
 .searchbar #searchImg {
@@ -105,14 +105,16 @@ body {
     width: 120px;
     border-radius:25px;
     border-style:inherit;
-    background-color: rgb(90, 90, 240);
+    font-size: 18px;
+    font-weight: bold;
+    background-color: rgb(128, 207, 233);
 }
 /* ------------------DASHBOARD----------------------------------- */
 
 .dashboard {
     grid-row-start: 1;
     grid-row-end: 4;
-    background-color: lightblue;
+    background-color:rgb(128, 207, 233);
     display: flex;
     flex-direction: column;
     gap: 60px;
@@ -167,6 +169,7 @@ a {
     grid-row-end: 4;
     background-color: rgb(245, 245, 245);
     display: flex;
+    
 }
 
 .left-cards {
@@ -174,6 +177,7 @@ a {
     /* display: flex;
     flex-direction: column; */
     padding: 30px;
+    padding-left: 50px ;
     width: 65%;
 }
 
@@ -218,13 +222,10 @@ a {
     padding: 30px;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    gap: 5px;
 }
 
-.right-stacked-cards {
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-    margin: 0;
-}
 
 .announcments {
     display: flex;
@@ -239,6 +240,7 @@ a {
 .announcments .announcment {
     border-bottom: solid;
     border-width: 1px;
+    border-color: gray;
 }
 
 .announcment {
@@ -254,8 +256,8 @@ a {
 }
 
 .trend img {
-    width: 60px;
-    height: 60px;
+    width: 13.5%;
+    height: 100%;
     border-radius: 50%;
 }
 
@@ -276,6 +278,11 @@ a {
     padding: 20px;
 }
 
+.right-cards  h1{
+    font-size: 20px;
+}
 
-
+.left-cards h1 {
+    font-size: 20px;
+}
 
